# pumafabrics

./: .gitignore  README.md  import_pickle.py  pyproject.toml  requirements.txt
evaluations/: kuka_comparison_2nd_pouring.py  kuka_comparison_2nd_tomato.py  kuka_comparison_ALL.py  point_robot_comparison.py
examples/: dinova_Fabrics.py  dinova_TamedPUMA.py  dinova_TamedPUMA_1stR3S3_hierarchical.py  dinova_TamedPUMA_3D_hierarchical.py  dinova_TamedPUMA_R3S3_hierarchical.py  kinova_Fabrics.py  kinova_PUMA_3D_ModulationIK.py  kinova_TamedPUMA.py  kinova_TamedPUMA_1stR3S3_hierarchical.py  kinova_TamedPUMA_2ndR3S3_hierarchical.py  kinova_TamedPUMA_3D_hierarchical.py  kinova_TamedPUMA_R3S3_hierarchical.py  kinova_TamedPUMA_hierarchical.py  kuka_Fabrics.py  kuka_PUMA_3D_ModulationIK.py  kuka_PUMA_3D_ModulationIK_LotsObsts.py  kuka_TamedPUMA.py  kuka_TamedPUMA_1000Obst.py  kuka_TamedPUMA_LotsObsts.py  kuka_fabrics_comparison.py  kuka_stableMP_3D_GOMP.py  kuka_stableMP_3D_ModulationIK.py  kuka_stableMP_3D_ModulationIK_1000Obst.py  kuka_stableMP_fabrics_2nd.py  point_robot_Fabrics.py  point_robot_PUMA.py  point_robot_TamedPUMA_CPM.py  point_robot_TamedPUMA_FPM.py  point_robot_TamedPUMA_hierarchical.py  test_examples.py
src/: background_vectorfield.py  import_pickle.py  kuka_comparison.py  kuka_comparison_2nd.py  kuka_comparison_2nd_backup.py  kuka_comparison_2nd_no_obst.py  kuka_comparison_2nd_no_obst_pouring.py  kuka_comparison_2nd_obst.py  kuka_comparison_2nd_pouring.py  kuka_comparison_ALL.py  kuka_comparison_pouring_demonstrations.py  kuka_comparison_tomato_demonstrations.py  (+35 more)
(+330 files in other folders)
